--- a/main.html
+++ b/main.html
@@ -7,6 +7,21 @@
 </head>
 
 <body>
+	<div class="holder">
+		<div class="item-1">3</div>
+		<div class="item-2">1</div>
+		<div class="item-3">2</div>
+	</div>
+	<br><br>
+	<div class="holder-1">
+		<div class="item-1">3</div>
+		<div class="item-1">4</div>
+		<div class="item-1">5</div>
+		<div class="item-1">6</div>
+		<div class="item-1">7</div>
+		<div class="item-2">1</div>
+		<div class="item-3">2</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
